--- a/_like_page.html
+++ b/_like_page.html
@@ -12,7 +12,7 @@
   <div class="mt-4 like-page">
     <div class="row">
       <div class="col">
-        <p class="mb-1"><strong>{{ heading | default: "Do you like this page?"}}</strong></p>
+        <p class="mb-1"><strong>{{ heading | default: "Aimez-vous cette page?"}}</strong></p>
         <div class="sharetable d-flex flex-wrap align-items-center">
           <div class="facebook-cell">
             {% if request.sorta_logged_in? %}
