--- a/_homepage_excerpt_feedback.html
+++ b/_homepage_excerpt_feedback.html
@@ -34,7 +34,7 @@
               <div class="form-group">
                 <div class="custom-control custom-checkbox">
                   {% check_box "is_private", class:"custom-control-input checkbox" %}
-                  <label class="custom-control-label checkbox" for="feedback_is_private">Don't post this publicly</label>
+                  <label class="custom-control-label checkbox" for="feedback_is_private">Ne pas publier ceci publiquement</label>
                 </div>
               </div>
             {% endif %}
@@ -44,14 +44,14 @@
             <div class="form-row">
               <div class="form-group col-sm-6">
                 <div class="form-control-material">
-                  <label for="feedback_first_name" class="floating-label floating-label--float-above">First Name*</label>
+                  <label for="feedback_first_name" class="floating-label floating-label--float-above">Prénom*</label>
                   {% text_field "first_name", class:"form-control text", required:"required" %}
                 </div>
               </div>
   
               <div class="form-group col-sm-6">
                 <div class="form-control-material">
-                  <label for="feedback_last_name" class="floating-label floating-label--float-above">Last Name*</label>
+                  <label for="feedback_last_name" class="floating-label floating-label--float-above">Nom*</label>
                   {% text_field "last_name", class:"form-control text", required:"required" %}
                 </div>
               </div>
@@ -62,7 +62,7 @@
             <div class="form-row">
               <div class="form-group col-sm-6">
                 <div class="form-control-material">
-                  <label for="feedback_email" class="floating-label floating-label--float-above">Email*</label>
+                  <label for="feedback_email" class="floating-label floating-label--float-above">Courriel*</label>
                   {% email_field "email", class:"form-control text", required:"required" %}
                 </div>
               </div>
@@ -70,7 +70,7 @@
               {% if site.ask_for_mobiles? %}
                 <div class="form-group col-sm-6">
                   <div class="form-control-material">
-                    <label for="feedback_mobile_number" class="floating-label floating-label--float-above">Mobile phone</label>
+                    <label for="feedback_mobile_number" class="floating-label floating-label--float-above">Téléphone mobile</label>
                     {% phone_field "mobile_number", class:"form-control text" %}
                   </div>
                 </div>
@@ -82,7 +82,7 @@
                 <div class="form-group col-sm-6">
                   <div class="custom-control custom-checkbox">
                     {% check_box "email_opt_in", class:"custom-control-input checkbox" %}
-                    <label class="custom-control-label checkbox" for="feedback_email_opt_in">Send me email updates</label>
+                    <label class="custom-control-label checkbox" for="feedback_email_opt_in">Envoyez-moi des mises à jour par courriel</label>
                   </div>
                 </div>
   
@@ -90,7 +90,7 @@
                   <div class="form-group col-sm-6">
                     <div class="custom-control custom-checkbox">
                       {% check_box "mobile_opt_in", class:"custom-control-input checkbox" %}
-                      <label class="custom-control-label checkbox" for="feedback_mobile_opt_in">Send me text messages</label>
+                      <label class="custom-control-label checkbox" for="feedback_mobile_opt_in">Envoyez-moi des messages texte</label>
                     </div>
                   </div>
                 {% endif %}
