--- a/pages_show_moneybomb_wide.html
+++ b/pages_show_moneybomb_wide.html
@@ -3,240 +3,241 @@
 <![endif]-->
 
 <div class="row">
-    <div class="col-12 col-lg-9 mx-auto">
-      {% if page.moneybomb.content.size > 0 %}
-        <div id="intro" class="intro">
-          {{ page.moneybomb.content }}
+  <div class="col-12 col-lg-9 mx-auto">
+    {% if page.moneybomb.content.size > 0 %}
+      <div id="intro" class="intro">
+        {{ page.moneybomb.content }}
+      </div>
+    {% endif %}
+
+    {% if page.show_social_slider? and page.public_activities_count > 0 %}
+      {% include "social_slider" %}
+
+      <hr />
+    {% endif %}
+
+    {% if page.moneybomb.has_start_at? and page.moneybomb.is_active? == false and page.moneybomb.is_past? == false %}
+      <div class="mb-3">
+        <div class="subhead">COMPTE À REBOURS JUSQU'À {{ page.moneybomb.local_start_at | moneybomb_time }}</div>
+        <div class="subtext">
+          <div id="pre-countdown" class="countdown"></div>
         </div>
-      {% endif %}
-  
-      {% if page.show_social_slider? and page.public_activities_count > 0 %}
-        {% include "social_slider" %}
-  
-        <hr />
-      {% endif %}
-  
-      {% if page.moneybomb.has_start_at? and page.moneybomb.is_active? == false and page.moneybomb.is_past? == false %}
-        <div class="mb-3">
-          <div class="subhead">COUNTDOWN TO {{ page.moneybomb.local_start_at | moneybomb_time }}</div>
-          <div class="subtext">
-            <div id="pre-countdown" class="countdown"></div>
+      </div>
+    {% elsif page.moneybomb.is_active? %}
+      <div class="mb-3">
+        <div class="subhead">TEMPS RESTANT POUR FAIRE UN DON</div>
+        <div class="subtext">
+          <div id="active-countdown" class="countdown"></div>
+        </div>
+      </div>
+    {% endif %}
+
+    {% assign thermo_width = 50 %}
+
+    {% if page.moneybomb.has_amount_goal? %}
+      <div class="mb-3">
+        {% include "progress"
+          percent: page.moneybomb.percent_of_amount_goal,
+          amount: page.pledges_amount_format,
+          goal: page.moneybomb.amount_goal_format,
+          label: 'promis'
+        %}
+      </div>
+    {% elsif page.moneybomb.has_pledger_goal? %}
+      <div class="mb-3">
+        {% include "progress"
+          percent: page.moneybomb.percent_of_pledger_goal,
+          count: page.pledges_count,
+          goal: page.moneybomb.pledger_goal,
+          label: 'donateurs'
+        %}
+      </div>
+    {% endif %}
+
+    {% if page.moneybomb.is_pledged? %}
+
+      <div class="form">
+        {% form_for pledge %}
+
+          {% include "form_greeting" greeting: "merci pour votre promesse de don!" %}
+
+          <div class="form-errors">
+            {% error_messages_for pledges %}
           </div>
-        </div>
-      {% elsif page.moneybomb.is_active? %}
-        <div class="mb-3">
-          <div class="subhead">TIME LEFT TO DONATE</div>
-          <div class="subtext">
-            <div id="active-countdown" class="countdown"></div>
+
+          <label for="pledge_content">Modifier le montant de votre promesse</label>
+
+          <div id="moneybomb-amounts" class="moneybomb-amounts btn-group-toggle mb-5" data-toggle="buttons">
+            {{ page.moneybomb.form_amount_options }}
           </div>
-        </div>
-      {% endif %}
-  
-      {% assign thermo_width = 50 %}
-  
-      {% if page.moneybomb.has_amount_goal? %}
-        <div class="mb-3">
-          {% include "progress"
-            percent: page.moneybomb.percent_of_amount_goal,
-            amount: page.pledges_amount_format,
-            goal: page.moneybomb.amount_goal_format,
-            label: 'pledged'
-          %}
-        </div>
-      {% elsif page.moneybomb.has_pledger_goal? %}
-        <div class="mb-3">
-          {% include "progress"
-            percent: page.moneybomb.percent_of_pledger_goal,
-            count: page.pledges_count,
-            goal: page.moneybomb.pledger_goal,
-            label: 'pledgers'
-          %}
-        </div>
-      {% endif %}
-  
-      {% if page.moneybomb.is_pledged? %}
-  
-        <div class="form">
-          {% form_for pledge %}
-  
-            {% include "form_greeting" greeting: "thank you for pledging!" %}
-  
-            <div class="form-errors">
-              {% error_messages_for pledges %}
-            </div>
-  
-            <label for="pledge_content">Change your pledge amount</label>
-  
-            <div id="moneybomb-amounts" class="moneybomb-amounts btn-group-toggle mb-5" data-toggle="buttons">
-              {{ page.moneybomb.form_amount_options }}
-            </div>
-  
-  
-  
-            <div class="my-4">
-              {% if page.is_commentable? %}
+
+
+
+          <div class="my-4">
+            {% if page.is_commentable? %}
               {% submit_tag "Save pledge", class:"btn btn-primary submit-button mb-2 mb-md-0" %} &nbsp;
-              {% endif %}
-  
-              {{ page.moneybomb.current_pledge | delete_link message: "Cancel pledge" class_name: "btn btn-secondary destroy-link" }}
-  
-              <div class="form-submit"></div>
-            </div>
-  
-          {% endform_for %}
-          </div><!--/.form -->
-  
-      {% else %}
-  
-        <div class="form">
-          {% form_for pledge %}
-  
-            {% if request.sorta_logged_in? %}
-              {% include "form_greeting" greeting: "souhaitez-vous faire une promesse de don?" %}
             {% endif %}
-  
-            <h2 class="h5">Quel montant souhaitez-vous promettre de donner à{% if page.moneybomb.has_start_at? %} {{ page.moneybomb.local_start_at | moneybomb_time }}{% endif %}?</h2>
-  
-            <div class="form-errors">
-              {% error_messages_for pledge %}
-            </div>
-  
-            <div id="moneybomb-amounts" class="moneybomb-amounts btn-group-toggle mb-5" data-toggle="buttons">
-              {{ page.moneybomb.form_amount_options }}
-            </div>
-  
-            {% if request.sorta_logged_in? == false or request.current_signup.has_name? == false %}
-              <div class="form-row">
-                <div class="form-group col-md-6">
-                  <div class="form-control-material">
-                    <label for="pledge_first_name" class="floating-label floating-label--float-above">First Name*</label>
-                    {% text_field "first_name", class:"form-control text" required:"required" %}
-                  </div>
-                </div>
-  
-                <div class="form-group col-md-6">
-                  <div class="form-control-material">
-                    <label for="pledge_last_name" class="floating-label floating-label--float-above">Last Name*</label>
-                    {% text_field "last_name", class:"form-control text", required:"required" %}
-                  </div>
+
+            {{ page.moneybomb.current_pledge | delete_link message: "Annuler la promesse" class_name: "btn btn-secondary destroy-link" }}
+
+            <div class="form-submit"></div>
+          </div>
+
+        {% endform_for %}
+        </div><!--/.form -->
+
+    {% else %}
+
+      <div class="form">
+        {% form_for pledge %}
+
+          {% if request.sorta_logged_in? %}
+            {% include "form_greeting" greeting: "souhaitez-vous faire une promesse de don?" %}
+          {% endif %}
+
+          <h2 class="h5">Quel montant souhaitez-vous promettre de donner à{% if page.moneybomb.has_start_at? %} {{ page.moneybomb.local_start_at | moneybomb_time }}{% endif %}?</h2>
+
+          <div class="form-errors">
+            {% error_messages_for pledge %}
+          </div>
+
+          <div id="moneybomb-amounts" class="moneybomb-amounts btn-group-toggle mb-5" data-toggle="buttons">
+            {{ page.moneybomb.form_amount_options }}
+          </div>
+
+          {% if request.sorta_logged_in? == false or request.current_signup.has_name? == false %}
+            <div class="form-row">
+              <div class="form-group col-md-6">
+                <div class="form-control-material">
+                  <label for="pledge_first_name" class="floating-label floating-label--float-above">Prénom*</label>
+                  {% text_field "first_name", class:"form-control text" required:"required" %}
                 </div>
               </div>
-            {% endif %}
-  
-            {% if request.sorta_logged_in? == false %}
-              <div class="form-row">
+
+              <div class="form-group col-md-6">
+                <div class="form-control-material">
+                  <label for="pledge_last_name" class="floating-label floating-label--float-above">Nom*</label>
+                  {% text_field "last_name", class:"form-control text", required:"required" %}
+                </div>
+              </div>
+            </div>
+          {% endif %}
+
+          {% if request.sorta_logged_in? == false %}
+            <div class="form-row">
+              <div class="form-group col-md-6">
+                <div class="form-control-material">
+                  <label for="pledge_email" class="floating-label floating-label--float-above">Courriel*</label>
+                  {% email_field "email", class:"form-control text", required:"required" %}
+                </div>
+              </div>
+
+              {% if site.ask_for_mobiles? %}
                 <div class="form-group col-md-6">
                   <div class="form-control-material">
-                    <label for="pledge_email" class="floating-label floating-label--float-above">Email*</label>
-                    {% email_field "email", class:"form-control text", required:"required" %}
+                    <label for="pledge_mobile_number" class="floating-label floating-label--float-above">Téléphone mobile</label>
+                    {% phone_field "mobile_number", class:"form-control text" %}
                   </div>
                 </div>
-  
+              {% endif %}
+            </div>
+
+            {% unless page.show_consent_form? %}
+              <div class="form-row">
+                <div class="form-group col-md-6">
+                  <div class="custom-control custom-checkbox">
+                    {% check_box "email_opt_in", class:"custom-control-input checkbox" %}
+                    <label class="custom-control-label checkbox" for="pledge_email_opt_in">Envoyez-moi des mises à jour par courriel</label>
+                  </div>
+                </div>
+
                 {% if site.ask_for_mobiles? %}
                   <div class="form-group col-md-6">
-                    <div class="form-control-material">
-                      <label for="pledge_mobile_number" class="floating-label floating-label--float-above">Mobile phone</label>
-                      {% phone_field "mobile_number", class:"form-control text" %}
+                    <div class="custom-control custom-checkbox">
+                      {% check_box "mobile_opt_in", class:"custom-control-input checkbox" %}
+                      <label class="custom-control-label checkbox" for="pledge_mobile_opt_in">Envoyez-moi des messages texte</label>
                     </div>
                   </div>
                 {% endif %}
               </div>
-  
-              {% unless page.show_consent_form? %}
-                <div class="form-row">
-                  <div class="form-group col-md-6">
-                    <div class="custom-control custom-checkbox">
-                      {% check_box "email_opt_in", class:"custom-control-input checkbox" %}
-                      <label class="custom-control-label checkbox" for="pledge_email_opt_in">Send me email updates</label>
-                    </div>
-                  </div>
-  
-                  {% if site.ask_for_mobiles? %}
-                    <div class="form-group col-md-6">
-                      <div class="custom-control custom-checkbox">
-                        {% check_box "mobile_opt_in", class:"custom-control-input checkbox" %}
-                        <label class="custom-control-label checkbox" for="pledge_mobile_opt_in">Send me text messages</label>
-                      </div>
-                    </div>
-                  {% endif %}
-                </div>
-              {% endunless %}
-            {% endif %}
-  
-  
-            {% if request.sorta_logged_in? == false or request.current_signup.has_full_address? == false %}
-              <div class="form-group">
-                <div class="form-control-material">
-                  <label for="pledge_submitted_address" class="floating-label floating-label--float-above">Adresse (Rue, Ville, Province, Code postal)</label>
-                  {% text_field "submitted_address", class:"form-control text" %}
-                </div>
+            {% endunless %}
+          {% endif %}
+
+
+          {% if request.sorta_logged_in? == false or request.current_signup.has_full_address? == false %}
+            <div class="form-group">
+              <div class="form-control-material">
+                <label for="pledge_submitted_address" class="floating-label floating-label--float-above">Adresse (Rue, Ville, Province, Code postal)</label>
+                {% text_field "submitted_address", class:"form-control text" %}
               </div>
-            {% endif %}
-  
-            {% if site.ask_to_publish_to_slider? %}
-              <div class="form-group">
-                <div class="custom-control custom-checkbox">
-                  {% check_box "is_private", class:"custom-control-input checkbox" %}
-                  <label class="custom-control-label checkbox" for="pledge_is_private">Don't publish this on the website</label>
-                </div>
+            </div>
+          {% endif %}
+
+          {% if site.ask_to_publish_to_slider? %}
+            <div class="form-group">
+              <div class="custom-control custom-checkbox">
+                {% check_box "is_private", class:"custom-control-input checkbox" %}
+                <label class="custom-control-label checkbox" for="pledge_is_private">Ne pas publier ceci sur le site web</label>
               </div>
-            {% endif %}
-  
-            {% if request.sorta_logged_in? == false or request.current_signup.is_volunteer == false %}
-              <div class="form-group">
-                <div class="custom-control custom-checkbox">
-                  {% check_box "is_volunteer", class:"custom-control-input checkbox" %}
-                  <label class="custom-control-label checkbox" for="pledge_is_volunteer">Je veux être bénévole</label>
-                </div>
+            </div>
+          {% endif %}
+
+          {% if request.sorta_logged_in? == false or request.current_signup.is_volunteer == false %}
+            <div class="form-group">
+              <div class="custom-control custom-checkbox">
+                {% check_box "is_volunteer", class:"custom-control-input checkbox" %}
+                <label class="custom-control-label checkbox" for="pledge_is_volunteer">Je veux être bénévole</label>
               </div>
-            {% endif %}
-  
-  
-  
-            {% if page.show_consent_form? %}
-              {% include "consent_form" %}
-            {% endif %}
-  
-            {% submit_tag "Soumettre ma promesse de don", class:"btn btn-primary submit-button" %}
-            <div class="form-submit"></div>
-  
-            {% if page.text_keyword_instructions.size > 0 %}
-              <div class="form-group">
-                or {{ page.text_keyword_instructions }}
-              </div>
-            {% endif %}
-  
-          {% endform_for %}
-        </div><!--/.form -->
-  
-      {% endif %}
-  
-      {% if page.tags_count > 0 %}
-        <div id="page-tags" class="page-tags">
-          {% include "page_tags" with page %}
-        </div>
-      {% endif %}
-  
-      {% include "like_page" %}
-    </div><!--/.col-12 -->
-  </div><!--/.row -->
-  
-  <script src="/javascripts/jquery.countdown.min.js"></script>
-  <script src="/assets/liquid/money-bomb.js"></script>
-  <script>
-    ;$(function () {
-      var moneyBomb = new NB.Liquid.MoneyBomb();
-  
-      moneyBomb.setCountdown({
+            </div>
+          {% endif %}
+
+
+
+          {% if page.show_consent_form? %}
+            {% include "consent_form" %}
+          {% endif %}
+
+          {% submit_tag "Soumettre ma promesse de don", class:"btn btn-primary submit-button" %}
+          <div class="form-submit"></div>
+
+          {% if page.text_keyword_instructions.size > 0 %}
+            <div class="form-group">
+              ou {{ page.text_keyword_instructions }}
+            </div>
+          {% endif %}
+
+        {% endform_for %}
+      </div><!--/.form -->
+
+    {% endif %}
+
+    {% if page.tags_count > 0 %}
+      <div id="page-tags" class="page-tags">
+        {% include "page_tags" with page %}
+      </div>
+    {% endif %}
+
+    {%comment%}
+    {% include "like_page" %}
+    {%endcomment%}
+  </div><!--/.col-12 -->
+</div><!--/.row -->
+
+<script src="/javascripts/jquery.countdown.min.js"></script>
+<script src="/assets/liquid/money-bomb.js"></script>
+<script>
+  ;$(function () {
+    var moneyBomb = new NB.Liquid.MoneyBomb();
+
+    moneyBomb.setCountdown({
         $el : $('#pre-countdown'),
         until: +{{ page.moneybomb.seconds_until }}
-      });
-  
-      moneyBomb.setCountdown({
+    });
+
+    moneyBomb.setCountdown({
         $el : $('#active-countdown'),
         until: +{{ page.moneybomb.seconds_left }}
-      });
     });
-  </script>
-  <script src="vcs-moneybomb.js"></script>
-  
+  });
+</script>
+<script src="vcs-moneybomb.js"></script>
