--- a/_form_greeting.html
+++ b/_form_greeting.html
@@ -9,16 +9,16 @@
 
   <div>
     {% if greeting == blank %}
-      <h5 class="mb-0 mr-2">Hi {{ request.current_signup.first_name_or_friend }}.</h5>
+      <h5 class="mb-0 mr-2">Bonjour {{ request.current_signup.first_name_or_friend }}.</h5>
     {% else %}
       <h5 class="mb-0 mr-2">{{ request.current_signup.first_name_or_friend }}, {{ greeting }}</h5>
     {% endif %}
 
     {% if request.sorta_logged_in? and request.logged_in? == false %}
-      <div class="text-xs"><i>If you're not {{ request.current_signup.name_or_email }}, <a href="{{ request.current_signup.logout_url }}">sign out</a>.</i></div>
+      <div class="text-xs"><i>Si vous n'êtes pas {{ request.current_signup.name_or_email }}, <a href="{{ request.current_signup.logout_url }}">déconnectez-vous</a>.</i></div>
     {% endif %}
   </div>
 
-  <a href="{{ request.current_signup.settings_url }}" class="mr-2" data-toggle="tooltip" alt="Your settings" title="Your settings"><i class="fas fa-cog" aria-hidden="true"></i></a>
-  <a href="{{ request.current_signup.logout_url }}" class="mr-2" data-toggle="tooltip" alt="Logout" title="Logout"><i class="fas fa-sign-out-alt" aria-hidden="true"></i></a>
+  <a href="{{ request.current_signup.settings_url }}" class="mr-2" data-toggle="tooltip" alt="Vos paramètres" title="Vos paramètres"><i class="fas fa-cog" aria-hidden="true"></i></a>
+  <a href="{{ request.current_signup.logout_url }}" class="mr-2" data-toggle="tooltip" alt="Déconnexion" title="Déconnexion"><i class="fas fa-sign-out-alt" aria-hidden="true"></i></a>
 </div>
