--- a/_features.html
+++ b/_features.html
@@ -45,11 +45,11 @@
                   <div class="container">
 
                     {% if page.is_homepage? %}
-                      <h1 class="text-white mt-2 mb-3 ml-0">
+                      <h1 class="mt-2 mb-3 ml-0">
                         {{ components[0] }}
                       </h1>
                     {% else %}
-                      <h2 class="text-white mt-2 mb-3 ml-0">
+                      <h2 class="mt-2 mb-3 ml-0">
                         {{ components[0] }}
                       </h2>
                     {% endif %}
